# youtube-transcripter

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  prompts.yaml  summarize_agent.py  translate_agent.py
alembic/: env.py
database/: __init__.py  connection.py
dependencies/: auth.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Hero.tsx  OutputCard.tsx  ThemeToggle.tsx  icons.tsx
frontend/src/lib/: api.ts  types.ts
routes/: __init__.py  auth.py  language_detect.py  payments.py  pdf_request.py  summary_router.py  translate_router.py  utils.py  video_transcript.py
