[project]
name = "youtube-2-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cerebras-cloud-sdk>=1.67.0",
    "deepgram-sdk>=5.3.2",
    "fastapi>=0.128.1",
    "fpdf2>=2.8.5",
    "greenlet>=3.3.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.8",
    "mistralai>=1.12.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.1.31",
]
